deps: upgrade